# skilldeck

./: .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE.md  README.md  SECURITY.md  biome.json  cliff.toml  cspell.json  docker-compose.yml  index.html  issues-mapping.json  lefthook.yml  lingui.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  seedling.config.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.codebridge/: context.mv2  sessions.mv2
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
public/: splashscreen.html
scripts/: move-closed-issues.js  split-json.js
skilldeck-dashboard/: feedback.md
skilldeck-landing/: biome.json  lingui.config.ts  middleware.ts  next.config.ts  package-lock.json  package.json  skilldeck-product-analysis.md  (+4 more)
skilldeck-lint/: Cargo.toml
skilldeck-lint/src/: config.rs  lib.rs  warning.rs
skilldeck-lint/src/rules/: frontmatter.rs  mod.rs  quality.rs  security.rs  structure.rs
skilldeck-lint/tests/: test_basic.rs
skilldeck-lint/tests/fixtures/sample-skill/: SKILL.md
skilldeck-platform/: .env.example  .gitignore  Cargo.toml  Dockerfile  fly.toml  platform.db
skilldeck-platform/migration/: Cargo.toml
skilldeck-platform/migration/src/: lib.rs  m20260315_000001_create_platform_schema.rs  m20260315_000001_initial_schema.rs  m20260316_000002_create_skill_tables.rs  m20260317_000003_create_feedback_tables.rs
skilldeck-platform/src/: app.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  middleware.rs
skilldeck-platform/src/core/: handlers.rs  models.rs
skilldeck-platform/src/email/: mod.rs
skilldeck-platform/src/feedback/: handlers.rs  ingestion.rs  mod.rs  models.rs
skilldeck-platform/src/growth/: handlers.rs  mod.rs  models.rs  nudge_engine.rs
skilldeck-platform/src/preferences/: handlers.rs  models.rs
skilldeck-platform/src/skills/: enrichment.rs  handlers.rs  ingestion.rs  lint_cron.rs  metadata.rs  mod.rs  models.rs
src-tauri/: Cargo.toml  bacon.toml  tauri.conf.json
src-tauri/.skilldeck/: skilldeck-lint.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migration/: Cargo.toml
src-tauri/migration/src/: lib.rs  m20260313_000001_initial.rs  m20260314_000002_add_user_preferences.rs  m20260315_000003_add_platform_growth_tables.rs  m20260316_000004_create_registry_skills_cache.rs  m20260319_000004_add_message_fts.rs
src-tauri/skilldeck-core/: Cargo.toml
src-tauri/skilldeck-core/src/: connection.rs  error.rs  events.rs  lib.rs  mod.rs  search.rs  toon.rs
src-tauri/skilldeck-core/src/agent/: approval_gate.rs  built_in_tools.rs  context_builder.rs  load_skill_result.rs  loop.rs  mod.rs  subagent.rs  tool_dispatcher.rs
src-tauri/skilldeck-core/src/db/: connection.rs  mod.rs
src-tauri/skilldeck-core/src/markdown/: mod.rs  renderer.rs  streaming.rs  theme.rs  types.rs
src-tauri/skilldeck-core/src/mcp/: discovery.rs  mod.rs  registry.rs  sse_transport.rs  stdio_transport.rs  supervisor.rs  types.rs
src-tauri/skilldeck-core/src/models/: mcp_servers.rs  mod.rs  skills.rs  subagent_sessions.rs  usage_events.rs
src-tauri/skilldeck-core/src/providers/: claude.rs  mod.rs  ollama.rs  ollama_native.rs  openai.rs
src-tauri/skilldeck-core/src/skills/: loader.rs  mod.rs  resolver.rs  scanner.rs  watcher.rs
src-tauri/skilldeck-core/src/traits/: database.rs  mcp_transport.rs  mod.rs  model_provider.rs  skill_events.rs  skill_loader.rs  subagent_spawner.rs  sync_backend.rs  tool_approval_emitter.rs
src-tauri/skilldeck-core/src/workflow/: eval_opt.rs  executor.rs  graph.rs  mod.rs  parallel.rs  sequential.rs  types.rs
src-tauri/skilldeck-core/src/workspace/: context.rs  detector.rs  mod.rs
src-tauri/skilldeck-core/tests/integration/: agent_loop_tests.rs  agent_with_tools_and_skills.rs  db_connection_tests.rs  mcp_client_tests.rs  mod.rs  platform_client_tests.rs  provider_ready_tests.rs  skill_loader_tests.rs  workflow_executor_tests.rs
src-tauri/skilldeck-core/tests/security/: api_key_not_in_db.rs  symlink_skill_directory_skipped.rs
src-tauri/skilldeck-core/tests/unit/: agent_loop_tests.rs  approval_gate_tests.rs  core_error_tests.rs  mod.rs  ollama_tests.rs  workflow_graph_tests.rs
src-tauri/skilldeck-core/tests/utils/: mock_provider.rs
src-tauri/skilldeck-models/: Cargo.toml
src-tauri/skilldeck-models/src/: achievements.rs  artifacts.rs  attachments.rs  bookmarks.rs  context_item.rs  conversation_branches.rs  conversation_drafts.rs  conversation_mcp_overrides.rs  conversation_model_override.rs  conversation_skill_overrides.rs  conversation_tags.rs  conversation_ui_state.rs  conversations.rs  export_jobs.rs  folders.rs  lib.rs  local_nudge_cache.rs  mcp_tool_cache.rs  message_embeddings.rs  message_headings.rs  messages.rs  model_pricing.rs  pinned_artifacts.rs  profile_mcps.rs  profile_skills.rs  profiles.rs  prompt_variables.rs  prompts.rs  queued_messages.rs  registry_skills.rs  skill_source_dirs.rs  sync_state.rs  sync_watermarks.rs  tags.rs  templates.rs  tool_call_events.rs  user_preferences.rs  workflow_definitions.rs  workflow_executions.rs  workflow_steps.rs  (+2 more)
src-tauri/src/: commands.rs  config.rs  db.rs  events.rs  headings.rs  lib.rs  main.rs  nudge_poller.rs  platform_client.rs  state.rs  subagent_monitor.rs  subagent_registry.rs  subagent_server.rs
src-tauri/src/artifacts/: storage.rs
src-tauri/src/commands/: achievements.rs  analytics.rs  artifacts.rs  attachments.rs  bookmarks.rs  branches.rs  conversations.rs  drafts.rs  export.rs  files.rs  folders.rs  gist.rs  headings.rs  home_dir.rs  mcp.rs  messages.rs  mod.rs  ollama.rs  platform.rs  profiles.rs  provider_ready.rs  queue.rs  run_code.rs  settings.rs  skills.rs  theme.rs  workflows.rs  workspaces.rs
src-tauri/src/markdown/: error.rs  renderer.rs  streaming.rs  types.rs
src-tauri/src/skills/: folder_assembler.rs  installer.rs  mod.rs
src-tauri/src/sync/: mod.rs  skill_sync.rs
src-tauri/tests/e2e/: context-injection.spec.ts  installation.spec.ts
src-tauri/tests/integration/: lint_consistency.rs  search_tests.rs
(+728 files in other folders)
