[package]
name = "skilldeck-lint"
version = "0.1.0"
edition = "2021"
description = "Linting rules for Agent Skills"

[[bin]]
name = "skilldeck-lint"
path = "src/bin/main.rs"

[lib]
name = "skilldeck_lint"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
specta = { version = "2.0.0-rc.22" }
serde_yaml = "0.9"
serde_json = "1"
toml = "0.9"
thiserror = "2"
anyhow = "1"
walkdir = "2"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"

[dev-dependencies]
tempfile = "3"
