[package]
name = "skilldeck"
version = "0.1.0"
description = "Local-first AI Orchestration for Developers"
authors = ["elcoosp"]
edition = "2024"
license = "MIT"
repository = "https://github.com/elcoosp/skilldeck"
readme = "../README.md"
keywords = ["ai", "tauri", "desktop", "llm", "orchestration"]
categories = ["development-tools", "gui"]

[workspace]
members = ["skilldeck-core", ".", "migration"]
resolver = "2"

[lib]
name = "skilldeck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tokio = { version = "1.50.0", features = ["full"] }
sea-orm = { version = "2.0.0-rc.37", features = ["sqlx-sqlite", "runtime-tokio-native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
skilldeck-core = { path = "skilldeck-core" }
skilldeck-models = { path = "skilldeck-models" }
specta = "2.0.0-rc.22"
tauri-specta = { version = "2.0.0-rc.21", features = ["typescript"] }
specta-typescript = "0.0.9"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
tauri-plugin-store = "2.4.2"
tauri-plugin-keyring = "0.1.0"
uuid = "1.22.0"
chrono = "0.4.44"
dashmap = "6.1.0"
tokio-util = "0.7.18"
parking_lot = "0.12.5"
toon-rust = "0.1.3"
dirs = "6.0.0"
toml = "0.8"
hex = "0.4"
async-trait = "0.1"
reqwest = { version = "0.13.2", features = ["json"] }
thiserror = "2"


