[package]
name = "skilldeck"
version = "0.1.0"
description = "Local-first AI Orchestration for Developers"
authors = ["elcoosp"]
edition = "2024"
license = "MIT"
repository = "https://github.com/elcoosp/skilldeck"
readme = "../README.md"
keywords = ["ai", "tauri", "desktop", "llm", "orchestration"]
categories = ["development-tools", "gui"]

[workspace]
members = ["skilldeck-core", ".", "migration"]
resolver = "2"

[lib]
name = "skilldeck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
[features]
e2e-testing = ["tauri-plugin-playwright"]
[dependencies]
tauri-plugin-playwright = { version = "0.2", optional = true }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-dialog = "2"
tokio = { version = "1.50.0", features = ["full"] }
sea-orm = { version = "2.0.0-rc.37", features = ["sqlx-sqlite", "runtime-tokio-native-tls"] }
sea-query = "1.0.0-rc.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
skilldeck-core = { path = "./skilldeck-core" }
skilldeck-lint = {path = "../skilldeck-lint"}
skilldeck-models = { path = "skilldeck-models" }
specta = { version = "=2.0.0-rc.22", features= [ "chrono", "uuid", "serde_json"] }
tauri-specta = { version = "2.0.0-rc.21", features = ["typescript", "derive"] }
specta-typescript = "0.0.9"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
tauri-plugin-store = "2.4.2"
tauri-plugin-keyring = "0.1.0"
uuid = "1.22.0"
chrono = "0.4.44"
dashmap = "6.1.0"
tokio-util = "0.7.18"
parking_lot = "0.12.5"
toon-rust = "0.1.3"
dirs-next = "2.0.0"
toml = "1.0"
hex = "0.4"
async-trait = "0.1"
reqwest = { version = "0.13.2", features = ["json"] }
thiserror = "2"
anyhow = "1.0.102"
secrecy = { version = "0.10", features = ["serde"] }
futures = "0.3.32"
wiremock = "0.6.5"
walkdir = "2.5.0"
axum = "0.8.8"
adk-rust = "0.5.0"
async-stream = "0.3.6"
ignore = "0.4.25"
tauri-plugin-fs = "2"
regex = "1.12.3"
pulldown-cmark = "0.13.3"
tauri-plugin-devtools = "2.1.0"
