[package]
name = "migration"
version = "0.1.0"
edition = "2024"
[lib]
name = "migration"
path = "src/lib.rs"
[dependencies]
sea-orm = { version = "2.0.0-rc.37", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros"] }
sea-orm-migration = "2.0.0-rc.37"
uuid = "1.22.0"
tokio = { version = "1", features = ["full"] }
skilldeck-models = { path = "../skilldeck-models" }
chrono = { version = "0.4", features = ["serde"] }


