[package]
name = "skilldeck-core"
version = "0.1.0"
edition = "2024"

[dependencies]
skilldeck-lint = { path = "../../skilldeck-lint" }
tokio = { version = "1.50.0", features = ["full"] }

# Database (SeaORM 2.x with SQLite)
sea-orm = { version = "2.0.0-rc.37", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Specta
specta = { version = "=2.0.0-rc.22", features=[ "chrono", "uuid", "serde_json"]}
tauri-specta = { version = "2.0.0-rc.21", features = ["typescript", "derive"] }

# Data Types & Time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4.44", features = ["serde"] }

# HTTP Client
reqwest = { version = "0.13.2", features = ["json", "stream"] }

# Async Utilities
futures = "0.3"

# Graph Engine (for Workflows)
petgraph = "0.8.3"
dashmap = "6"

# Error Handling & Logging
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3.23"

# Filesystem & Config
notify = "8"
glob = "0.3"
config = "0.15"

# Traits
async-trait = "0.1"
serde_yaml = "0.9.34"

backoff = { version = "0.4", features = ["tokio"] }
dirs-next = "2.0"
sha2 = "0.11"
notify-debouncer-mini = "0.7.0"
bytes = "1.11.1"
migration = { path = "../migration" }
skilldeck-models = { path = "../skilldeck-models" }
sea-orm-migration = { version = "2.0.0-rc.37" }
tokio-util = "0.7.18"
parking_lot = "0.12.5"
toon-rust = "0.1.3"
hex = "0.4.3"
[dev-dependencies]
tempfile = "3.27.0"
